# CLIc

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePreset.json  CMakePresets.json  Doxyfile.in  LICENSE  MANIFEST  README.md  cleConfig.h.in  cmakepreset.json  codecov.yaml  codecov.yml  pre-commit-config.yml  prerequish.md  pyclic_test.py  pyproject.toml  setup.py  split_cpp.py  vcpkg.json
benchmark/: CMakeLists.txt  README.md  benchmark_base.cpp  benchmark_dummy.cpp  benchmark_kernel.cpp  benchmark_maximum_projections.cpp  benchmark_mean.cpp  benchmark_means_comparison.cpp  benchmark_push_pull.cpp
clic/: CMakeLists.txt  clic.h.in  clic.hpp.in  preamble.cl
clic/include/: CLE.h  CMakeLists.txt  array.hpp  backend.hpp  cache.hpp  cle.hpp  cleAbsoluteKernel.h  cleAddImageAndScalarKernel.h  cleAddImagesWeightedKernel.h  cleBlockEnumerateKernel.h  cleBuffer.h  cleCloseIndexGapsInLabelMapKernel.h  cleCommandQueueManager.h  cleConnectedComponentLabellingBoxKernel.h  cleConnectedComponentsLabelingBoxKernel.h  cleContextManager.h  cleDetectMaximaKernel.h  cleDeviceManager.h  cleDifferenceOfGaussianKernel.h  cleEqualKernel.h  cleErodeSphereKernel.h  cleExecuteSeparableKernel.h  cleFlagExistingIntensitiesKernel.h  cleFlagExistingLabelsKernel.h  cleFloat.h  cleGPU.h  cleGaussianBlurKernel.h  cleGreaterConstantKernel.h  cleGreaterKernel.h  cleGreaterOrEqualConstantKernel.h  cleInt.h  cleKernel.h  cleKernelList.h  cleLightObject.h  cleMaximumXProjectionKernel.h  cleMaximumYProjectionKernel.h  cleMaximumZProjectionKernel.h  cleMean2DSphereKernel.h  cleMeanBoxKernel.h  cleMeanKernel.h  (+44 more)
clic/src/: CLE.cpp  array.cpp  backendmanager.cpp  cache.cpp  cleAbsoluteKernel.cpp  cleAddImagesWeightedKernel.cpp  cleBlockEnumerateKernel.cpp  cleBuffer.cpp  cleCloseIndexGapsInLabelMapKernel.cpp  cleConnectedComponentLabellingBoxKernel.cpp  cleConnectedComponentsLabelingBoxKernel.cpp  cleContextManager.cpp  cleCopyKernel.cpp  cleDetectMaximaKernel.cpp  cleDeviceManager.cpp  cleDilateSphereKernel.cpp  cleEqualConstantKernel.cpp  cleEqualKernel.cpp  cleErodeSphereKernel.cpp  cleExecuteSeparableKernel.cpp  cleFlagExistingIntensitiesKernel.cpp  cleFlagExistingLabelsKernel.cpp  cleFloat.cpp  cleGaussianBlurKernel.cpp  cleGreaterOrEqualConstantKernel.cpp  cleInt.cpp  cleKernel.cpp  cleLightObject.cpp  cleMaximumKernel.cpp  cleMaximumXProjectionKernel.cpp  cleMaximumZProjectionKernel.cpp  cleMean2DSphereKernel.cpp  cleMeanBoxKernel.cpp  cleMinimumOfAllPixelsKernel.cpp  cleMinimumXProjectionKernel.cpp  cleMinimumYProjectionKernel.cpp  cleMinimumZProjectionKernel.cpp  cleNonzeroMinimumBoxKernel.cpp  cleNotEqualConstantKernel.cpp  clePlatformManager.cpp  (+40 more)
clic/test/: CMakeLists.txt  absolute_test.cpp  add_image_and_scalar_test.cpp  add_image_weighted_test.cpp  block_enumerate_test.cpp  connected_component_labelling_box_test.cpp  connected_components_labeling_box_test.cpp  copy_test.cpp  create_functions_test.cpp  data_test.cpp  detect_maxima_test.cpp  difference_of_gaussian_test.cpp  equal_constant_test.cpp  equal_test.cpp  gpu_test.cpp  (+44 more)
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  build_doc.py  build_windows.md  clic_compile_guide.md  clic_prerequish_install.md  guidelines.md  index.html  opencl_installation.md  release_notes.md
src/: CLE.cpp  CMakeLists.txt  claddimageandscalar.cpp  claddimageandscalar2d.cpp  clbuffer.cpp  cleAbsoluteKernel.cpp  cleAddImageAndScalar.cpp  cleAddImageAndScalarKernel.cpp  cleAddImagesWeightedKernel.cpp  cleBuffer.cpp  cleCommandQueueManager.cpp  cleConfig.h.in  cleContextManager.cpp  cleCopyKernel.cpp  cleDetectMaximaKernel.cpp  cleDeviceManager.cpp  cleDifferenceOfGaussianKernel.cpp  cleEqualConstantKernel.cpp  cleExecuteSeparableKernel.cpp  cleFloat.cpp  cleGPU.cpp  cleGaussianBlurKernel.cpp  cleGreaterConstantKernel.cpp  cleGreaterKernel.cpp  cleGreaterOrEqualConstantKernel.cpp  cleGreaterOrEqualKernel.cpp  cleInt.cpp  cleKernel.cpp  cleLabelConnectComponenBoxtKernel.cpp  cleLabelConnectComponentBoxKernel.cpp  cleLabelConnectComponentKernel.cpp  cleLightObject.cpp  cleMaximumKernel.cpp  cleMaximumOfAllPixelsKernel.cpp  cleMaximumXProjectionKernel.cpp  cleMaximumYProjectionKernel.cpp  cleMaximumZProjection.cpp  cleMaximumZProjectionKernel.cpp  cleMean2DSphereKernel.cpp  cleMeanKernel.cpp  (+32 more)
test/: CMakeLists.txt  absolute_test.cpp  add_image_and_scalar_test.cpp  copy_test.cpp  core_functions_test.cpp  create_functions_test.cpp  data_test.cpp  detect_maxima_test.cpp  difference_of_gaussian_test.cpp  gaussian_blur_test.cpp  greater_or_equal_constant_test.cpp  greater_or_equal_test.cpp  greater_test.cpp  label_connect_component_box_test.cpp  maximum_all_pixels_test.cpp  maximum_test.cpp  maximum_x_projection_test.cpp  maximum_z_projection_test.cpp  mean2d_sphere_test.cpp  minimum_test.cpp  minimum_x_projection_test.cpp  not_equal_constant_test.cpp  pull_functions_test.cpp  push_functions_test.cpp  set_nonzero_pixels_to_pixelindex_test.cpp  smaller_constant_test.cpp  smaller_or_equal_constant_test.cpp  smaller_or_equal_test.cpp
tests/: CMakeLists.txt  absolute_test.cpp  add_image_and_scalar_2d_test.cpp  add_image_and_scalar_test.cpp  add_image_weighted_test.cpp  array_test.cpp  binary_and_test.cpp  binary_edge_detection_test.cpp  binary_not_test.cpp  binary_or_test.cpp  binary_subtract_test.cpp  binary_xor_test.cpp  block_enumerate_test.cpp  close_indexgaps_in_labelmap_test.cpp  connected_component_labeling_box_test.cpp  connected_component_labelling_box_test.cpp  connected_components_labeling_box_test.cpp  convolve_test.cpp  copy_test.cpp  core_buffer_test.cpp  core_gpu_test.cpp  core_image_test.cpp  core_kernel_test.cpp  core_scalar_test.cpp  crop_test.cpp  custom_kernel_test.cpp  custom_test.cpp  detect_maxima_test.cpp  detect_minima_test.cpp  difference_of_gaussian_test.cpp  dilate_box_test.cpp  dilate_sphere_test.cpp  divide_image_and_scalar_test.cpp  divide_images_test.cpp  equal_constant_test.cpp  equal_test.cpp  erode_box_test.cpp  erode_sphere_test.cpp  extend_labeling_via_voronoi_test.cpp  flag_existing_labels_test.cpp  (+59 more)
(+1226 files in other folders)
